--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -5,7 +5,7 @@ github_repo_root_url: https://github.com/jarviscanada/jarvis_data_eng_FraserRane
 
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
-summary: I'm a software developer with a Master's degree in Computer Science from Queen's University and a Bachelor's from Trent University. My experience spans academic research in machine learning for medical imaging and hands-on software development in industry, including work on geophysical interpretation tools at Lamontagne Geophysics. I'm passionate about solving real-world problems through technology-whether optimizing code, designing intuitive systems, or exploring tools like cloud computing and AI. What excites me most is the constant opportunity to innovate and make meaningful contributions through software.
+summary: "I'm a software developer with a Master's degree in Computer Science from Queen's University and a Bachelor's from Trent University. My experience spans academic research in machine learning for medical imaging and hands-on software development in industry, including two years of experience working on web apps using vanilla JavaScript (ES6+), HTML5, and CSS3 for geophysical interpretation tools at Lamontagne Geophysics. I'm passionate about solving real-world problems through technology, whether optimizing code, designing intuitive systems, or exploring tools like cloud computing and AI. What excites me most is the constant opportunity to innovate and make meaningful contributions through software."
 
 # Group your skills by level.
 # Your skills can be anything software related (e.g. language, frameworks, methodologies, software, etc.).
@@ -15,22 +15,24 @@ skills:
     - Java
     - Linux/Bash
     - RDBMS/SQL
-    - Agile/Scrum
-    - Git
-  # At least 5 skills
-  competent:
-    - Python
     - TypeScript
-    - C#/C++/C
     - React
+    - Python
     - TailwindCSS
   # At least 5 skills
+  competent:
+    - Agile/Scrum
+    - Git
+    - Docker
+    - Mockito
+    - C#/C++/C
+  # At least 5 skills
   familiar:
-    - JUint
-    - Jest
-    - Three.JS
-    - D3.JS
-    - Machine Learning
+    - AWS
+    - Swift
+    - Flask
+    - Functional Programming
+    - Reinforcement Learning
 
 # List of Jarvis projects
 jarvis_projects:
@@ -68,11 +70,10 @@ jarvis_projects:
 # Feel free to add more projects
 highlighted_projects:
   #project name
-  - name: "JavaFX Snake Game with Score Database"
+  - name: "Lamontagne Geophysics - 3C Plotter"
     #URL is optional
-    git_url: "https://github.com/studentuser13/Examples/tree/main/JavaFX%20Snake%20Game%20with%20Score%20Database"
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: "Developed a JavaFX snake game featuring real-time scoring and persistent high-score storage: built using Java and JavaFX for GUI, a relational database (e.g., SQLite/PostgreSQL) for score tracking, and Git version control. Implements collision detection, dynamic growth mechanics, and SQL integration to reinforce game logic and data-persistence concepts."
+    description: "Maintained and enhanced a browser-based geophysical data visualization tool using vanilla ES6+ JavaScript, D3.js, HTML5 and CSS3. Implemented signal-normalization algorithms, offline caching via custom service workers, installable web app manifests, support for legacy file formats, user preferences and viewing options, dynamic PDF export, UI enhancements and bug fixes. https://www.lamontagnegeophysics.com/plotter/ ."
   - name: "Prostate CT Segmentation Using UNet"
     git_url: "https://github.com/studentuser13/Examples/tree/main/Prostate%20CT%20Segmentation%20Using%20UNet%20(Colab%20Notebook)"
     description: "Developed a UNet-based deep learning model for prostate segmentation in CT scans using Python and PyTorch on Google Colab. Implemented data preprocessing with NumPy, SimpleITK, and scikit-learn; trained and evaluated on GPU to demonstrate semantic segmentation, visualization, and model performance in a medical imaging context."
@@ -110,7 +111,7 @@ education:
     degree: "Bachelor of Science in the Honours Program, Computing Systems"
     department: "Computing and Information Systems"
     awards_achievements:
-      - "Scholarship"
+      - "Trent National Renewable Scholarship"
       - "Dean's Honour Roll (2015-2019)"
 
 #Optional section
