--- a/core_java/grep/pom.xml
+++ b/core_java/grep/pom.xml
@@ -15,5 +15,10 @@
       <version>5.14.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.28</version>
+    </dependency>
   </dependencies>
 </project>
