--- a/core_java/grep/pom.xml
+++ b/core_java/grep/pom.xml
@@ -1,8 +1,8 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>ca.jrvs.apps</groupId>
-  <artifactId>grep</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>JavaGrep</artifactId>
+  <version>1.0</version>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -21,4 +21,29 @@
       <version>1.7.28</version>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.6.1</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>ca.jrvs.apps.grep.JavaGrepImpl</mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
