--- a/core_java/jdbc/learning-jdbc/pom.xml
+++ b/core_java/jdbc/learning-jdbc/pom.xml
@@ -40,6 +40,11 @@
       <artifactId>junit-jupiter-params</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.7.2</version>
+    </dependency>
   </dependencies>
 
   <build>
