logging with slf4j

--- a/core_java/stockquote/pom.xml
+++ b/core_java/stockquote/pom.xml
@@ -28,5 +28,16 @@
       <artifactId>okhttp</artifactId>
       <version>5.0.0-alpha.11</version>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.14.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.28</version>
+    </dependency>
   </dependencies>
 </project>
