--- a/core_java/stockquote/pom.xml
+++ b/core_java/stockquote/pom.xml
@@ -45,5 +45,10 @@
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.28</version>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.7.2</version>
+    </dependency>
   </dependencies>
 </project>
