added swagger config and api key

--- a/springboot/src/main/resources/application-test.properties
+++ b/springboot/src/main/resources/application-test.properties
@@ -3,3 +3,6 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 
 spring.jpa.show-sql=true
+
+finnhub.api.key=d4n0g8pr01qsn6g8qu0gd4n0g8pr01qsn6g8qu10
+finnhub.base.url=https://finnhub.io/api/v1
