--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/jrvstrading_test
 spring.datasource.username=postgres
 spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 finnhub.api.key=d4n0g8pr01qsn6g8qu0gd4n0g8pr01qsn6g8qu10
 finnhub.base.url=https://finnhub.io/api/v1
