--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://jrvs-pgspring:5432/jrvstrading_test
+spring.datasource.url=jdbc:postgresql://jrvs-pgspring:5432/jrvstrading
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
