--- a/JavaScript_TypeScript/typescript-practice-one/tsconfig.json
+++ b/JavaScript_TypeScript/typescript-practice-one/tsconfig.json
@@ -2,13 +2,13 @@
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
     // File Layout
-    // "rootDir": "./src",
-    // "outDir": "./dist",
+    "outDir": "./built",
+    "allowJs": true,
+    "target": "es5",
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
     "module": "nodenext",
-    "target": "esnext",
     "types": [],
     // For nodejs:
     // "lib": ["esnext"],
@@ -41,5 +41,7 @@
     "moduleDetection": "force",
     "skipLibCheck": true,
 
-  }
+  },
+  "include": ["./src/**/*"]
+
 }
