--- a/JavaScript_TypeScript/typescript-conversion/tsconfig.json
+++ b/JavaScript_TypeScript/typescript-conversion/tsconfig.json
@@ -2,14 +2,14 @@
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
     // File Layout
-    // "rootDir": "./src",
-    // "outDir": "./dist",
+    "outDir": "./built",
+    "allowJs": true,
+    "target": "es5",
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
     "module": "nodenext",
-    "target": "esnext",
-    "types": [],
+    "types": ["node", "jest"],
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
@@ -41,5 +41,8 @@
     "moduleDetection": "force",
     "skipLibCheck": true,
 
-  }
+  },
+  "include": ["./src/**/*"],
+  "exclude": ["./src/**/*.test.ts"]
+
 }
