--- a/JavaScript_TypeScript/typescript-conversion/package.json
+++ b/JavaScript_TypeScript/typescript-conversion/package.json
@@ -11,13 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "@types/jest": "^30.0.0",
-    "@types/node": "^25.0.10",
     "jsdom": "^26.1.0",
-    "ts-jest": "^29.4.6",
-    "typescript": "^5.9.3"
-  },
-  "dependencies": {
-    "@types/jsdom": "^27.0.0"
+    "ts-jest": "^29.4.6"
   }
 }
