--- a/JavaScript_TypeScript/typescript-practice-one/tsconfig.json
+++ b/JavaScript_TypeScript/typescript-practice-one/tsconfig.json
@@ -35,8 +35,8 @@
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
-    "isolatedModules": true,
+    "verbatimModuleSyntax": false,
+    "isolatedModules": false,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
