--- a/JavaScript_TypeScript/typescript-practice-one/package.json
+++ b/JavaScript_TypeScript/typescript-practice-one/package.json
@@ -5,10 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "tsc --watch"
+    "run:1": "tsx 1/test.ts",
+    "run:2": "tsx 2/test.ts",
+    "run:3": "tsx 3/test.ts",
+    "run:4": "tsx 4/test.ts",
+    "run:5": "tsx 5/test.ts",
+    "run:6": "tsx 6/test.ts",
+    "run:7": "tsx 7/test.ts",
+    "run:8": "tsx 8/test.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "devDependencies": {
+    "tsx": "^4.21.0"
+  }
 }
