--- a/JavaScript_TypeScript/typescript-practice-one/package.json
+++ b/JavaScript_TypeScript/typescript-practice-one/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "run-s run:*",
     "run:1": "tsx 1/test.ts",
     "run:2": "tsx 2/test.ts",
     "run:3": "tsx 3/test.ts",
@@ -19,6 +19,8 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "tsx": "^4.21.0"
+    "npm-run-all": "^4.1.5",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
