--- a/JavaScript_TypeScript/typescript-practice-one/tsconfig.json
+++ b/JavaScript_TypeScript/typescript-practice-one/tsconfig.json
@@ -19,11 +19,9 @@
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
-
     // Stricter Typechecking Options
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
-
     // Style Options
     // "noImplicitReturns": true,
     // "noImplicitOverride": true,
@@ -39,7 +37,6 @@
     "isolatedModules": false,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-    "skipLibCheck": true,
-
+    "skipLibCheck": true
   }
 }
