--- a/JavaScript_TypeScript/typescript-conversion/package.json
+++ b/JavaScript_TypeScript/typescript-conversion/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "devDependencies": {
     "jsdom": "^26.1.0",
-    "ts-jest": "^29.4.6"
+    "ts-jest": "^29.4.6",
+    "typescript": "^5.9.3"
   }
 }
