--- a/JavaScript_TypeScript/typescript-practice-one/package.json
+++ b/JavaScript_TypeScript/typescript-practice-one/package.json
@@ -16,7 +16,9 @@
     "run:9": "tsx 9/test.ts",
     "run:10": "tsx 10/test.ts",
     "run:11": "tsx 11/test.ts",
-    "run:12": "tsx 12/test.ts"
+    "run:12": "tsx 12/test.ts",
+    "run:13": "tsx 13/test.ts",
+    "run:14": "tsx 14/test.ts"
   },
   "keywords": [],
   "author": "",
