--- a/JavaScript_TypeScript/typescript-practice-one/package.json
+++ b/JavaScript_TypeScript/typescript-practice-one/package.json
@@ -18,7 +18,8 @@
     "run:11": "tsx 11/test.ts",
     "run:12": "tsx 12/test.ts",
     "run:13": "tsx 13/test.ts",
-    "run:14": "tsx 14/test.ts"
+    "run:14": "tsx 14/test.ts",
+    "run:15": "tsx 15/test.ts"
   },
   "keywords": [],
   "author": "",
