--- a/frontend/trading-ui/package.json
+++ b/frontend/trading-ui/package.json
@@ -16,6 +16,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
