--- a/frontend/trading-ui/package.json
+++ b/frontend/trading-ui/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/colors": "^8.0.1",
+    "antd": "^6.2.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0"
