--- a/frontend/trading-ui/package.json
+++ b/frontend/trading-ui/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/colors": "^8.0.1",
     "antd": "^6.2.3",
+    "axios": "^1.13.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0"
