--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -57,6 +57,9 @@ jarvis_projects:
   - name: "Springboot App"
     git_url: "/springboot"
     description: "This Spring Boot trading application provides a REST API for managing traders, accounts, portfolios, stock quotes, and market orders. It integrates live market data via Finnhub and uses Java 8, Maven, JPA/Hibernate, PostgreSQL, and Docker. Swagger UI enables testing, while JUnit 5 and Mockito ensure reliable service and data layers."
+  - name: "React Trading App"
+    git_url: "/frontend"
+    description: "This full-stack trading management application uses React, TypeScript, Ant Design, and the Spring Boot backend. The app supports CRUD operations for traders and accounts, real-time data from Finnhub with client-side validation, and API fetch managed by Axios. Providing a typical, responsive frontend."
   #- name: "Python Data Analytics"
   #  git_url: "/python_data_anlytics"
   #  description: ""
