--- a/cloud_k8_jenkins/minikube/psql-deployment.yaml
+++ b/cloud_k8_jenkins/minikube/psql-deployment.yaml
@@ -1,23 +1,23 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress-mysql
+  name: trading-mysql
   labels:
-    app: wordpress
+    app: trading
 spec:
   ports:
-    - port: 3306
+    - port: 5432
   selector:
-    app: wordpress
-    tier: mysql
+    app: trading
+    tier: db
   clusterIP: None
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pv-claim
+  name: psql-pv-claim
   labels:
-    app: wordpress
+    app: trading
 spec:
   accessModes:
     - ReadWriteOnce
@@ -28,47 +28,32 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wordpress-mysql
+  name: trading-psql
   labels:
-    app: wordpress
+    app: trading
 spec:
   selector:
     matchLabels:
-      app: wordpress
-      tier: mysql
+      app: trading
+      tier: db
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: wordpress
-        tier: mysql
+        app: trading
+        tier: db
     spec:
       containers:
-        - image: mysql:8.0
-          name: mysql
-          env:
-            - name: MYSQL_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mysql-pass
-                  key: password
-            - name: MYSQL_DATABASE
-              value: wordpress
-            - name: MYSQL_USER
-              value: wordpress
-            - name: MYSQL_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mysql-pass
-                  key: password
+        - image: fraserraney/trading-db:latest
+          name: psql
           ports:
-            - containerPort: 3306
-              name: mysql
+            - containerPort: 5432
+              name: psql
           volumeMounts:
-            - name: mysql-persistent-storage
-              mountPath: /var/lib/mysql
+            - name: psql-persistent-storage
+              mountPath: /var/lib/postgresql/data
       volumes:
-        - name: mysql-persistent-storage
+        - name: psql-persistent-storage
           persistentVolumeClaim:
-            claimName: mysql-pv-claim
+            claimName: psql-pv-claim
