minikube trading-app cluster

--- a/cloud_k8_jenkins/minikube/kustomization.yaml
+++ b/cloud_k8_jenkins/minikube/kustomization.yaml
@@ -1,6 +1,7 @@
 secretGenerator:
-  - name: mysql-pass
+  - name: trading-app
     literals:
+      - user=postgres
       - password=password
 resources:
   - psql-deployment.yaml
