--- a/cloud_k8_jenkins/minikube/trading-deployment.yaml
+++ b/cloud_k8_jenkins/minikube/trading-deployment.yaml
@@ -1,69 +1,54 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress
+  name: trading
   labels:
-    app: wordpress
+    app: trading
 spec:
   ports:
     - port: 80
+      targetPort: 8080
   selector:
-    app: wordpress
-    tier: frontend
+    app: trading
+    tier: app-server
   type: LoadBalancer
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: wp-pv-claim
-  labels:
-    app: wordpress
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 20Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wordpress
+  name: trading
   labels:
-    app: wordpress
+    app: trading
 spec:
   selector:
     matchLabels:
-      app: wordpress
-      tier: frontend
+      app: trading
+      tier: app-server
   strategy:
     type: Recreate
+  replicas: 2
   template:
     metadata:
       labels:
-        app: wordpress
-        tier: frontend
+        app: trading
+        tier: app-server
     spec:
       containers:
-        - image: wordpress:6.2.1-apache
-          name: wordpress
+        - image: fraserraney/trading-app:latest
+          name: trading
           env:
-            - name: WORDPRESS_DB_HOST
-              value: wordpress-mysql
-            - name: WORDPRESS_DB_PASSWORD
+            - name: SPRING_DATASOURCE_URL
+              value: jdbc:postgresql://trading-psql:5432/jrvstrading
+            - name: SPRING_DATASOURCE_USERNAME
               valueFrom:
                 secretKeyRef:
-                  name: mysql-pass
+                  name: trading-app
+                  key: user
+            - name: SPRING_DATASOURCE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: trading-app
                   key: password
-            - name: WORDPRESS_DB_USER
-              value: wordpress
           ports:
-            - containerPort: 80
-              name: wordpress
-          volumeMounts:
-            - name: wordpress-persistent-storage
-              mountPath: /var/www/html
-      volumes:
-        - name: wordpress-persistent-storage
-          persistentVolumeClaim:
-            claimName: wp-pv-claim
+            - containerPort: 8080
+              name: trading
