--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -60,6 +60,9 @@ jarvis_projects:
   - name: "React Trading App"
     git_url: "/frontend"
     description: "This full-stack trading management application uses React, TypeScript, Ant Design, and the Spring Boot backend. The app supports CRUD operations for traders and accounts, real-time data from Finnhub with client-side validation, and API fetch managed by Axios. The app provides a typical, responsive frontend."
+  - name: "Cloud, K8S, and DevOps"
+    git_url: "/cloud_k8_jenkins"
+    description: "Designed and deployed a cloud-native trading application on Azure using AKS and ACR, with separate dev and production clusters. Implemented a containerized CI/CD pipeline in Jenkins running on Kubernetes to automate image builds, registry pushes, and rolling deployments."
   #- name: "Python Data Analytics"
   #  git_url: "/python_data_anlytics"
   #  description: ""
