--- a/python_data_analytics/requirements.txt
+++ b/python_data_analytics/requirements.txt
@@ -12,11 +12,14 @@ certifi==2026.2.25
 cffi==2.0.0
 charset-normalizer==3.4.4
 comm==0.2.3
+contourpy==1.3.3
+cycler==0.12.1
 debugpy==1.8.20
 decorator==5.2.1
 defusedxml==0.7.1
 executing==2.2.1
 fastjsonschema==2.21.2
+fonttools==4.61.1
 fqdn==1.5.1
 h11==0.16.0
 httpcore==1.0.9
@@ -29,6 +32,7 @@ ipywidgets==8.1.8
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.6
+joblib==1.5.3
 json5==0.13.0
 jsonpointer==3.0.0
 jsonschema==4.26.0
@@ -45,8 +49,10 @@ jupyterlab==4.5.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.28.0
 jupyterlab_widgets==3.0.16
+kiwisolver==1.4.9
 lark==1.3.1
 MarkupSafe==3.0.3
+matplotlib==3.10.8
 matplotlib-inline==0.2.1
 mistune==3.2.0
 nbclient==0.10.4
@@ -55,10 +61,13 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.5.4
 notebook_shim==0.2.4
+numpy==2.4.2
 packaging==26.0
+pandas==3.0.1
 pandocfilters==1.5.1
 parso==0.8.6
 pexpect==4.9.0
+pillow==12.1.1
 platformdirs==4.9.2
 prometheus_client==0.24.1
 prompt_toolkit==3.0.52
@@ -67,6 +76,7 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==3.0
 Pygments==2.19.2
+pyparsing==3.3.2
 python-dateutil==2.9.0.post0
 python-json-logger==4.0.0
 PyYAML==6.0.3
@@ -77,12 +87,15 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
 rpds-py==0.30.0
+scikit-learn==1.8.0
+scipy==1.17.1
 Send2Trash==2.1.0
 setuptools==82.0.0
 six==1.17.0
 soupsieve==2.8.3
 stack-data==0.6.3
 terminado==0.18.1
+threadpoolctl==3.6.0
 tinycss2==1.4.0
 tornado==6.5.4
 traitlets==5.14.3
