--- a/python_data_analytics/requirements.txt
+++ b/python_data_analytics/requirements.txt
@@ -11,6 +11,7 @@ bleach==6.3.0
 certifi==2026.2.25
 cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
 comm==0.2.3
 contourpy==1.3.3
 cycler==0.12.1
@@ -21,6 +22,7 @@ executing==2.2.1
 fastjsonschema==2.21.2
 fonttools==4.61.1
 fqdn==1.5.1
+greenlet==3.3.2
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -55,6 +57,7 @@ MarkupSafe==3.0.3
 matplotlib==3.10.8
 matplotlib-inline==0.2.1
 mistune==3.2.0
+mypy_extensions==1.1.0
 nbclient==0.10.4
 nbconvert==7.17.0
 nbformat==5.10.4
@@ -66,12 +69,14 @@ packaging==26.0
 pandas==3.0.1
 pandocfilters==1.5.1
 parso==0.8.6
+pathspec==1.0.4
 pexpect==4.9.0
 pillow==12.1.1
 platformdirs==4.9.2
 prometheus_client==0.24.1
 prompt_toolkit==3.0.52
 psutil==7.2.2
+psycopg2-binary==2.9.11
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==3.0
@@ -79,6 +84,7 @@ Pygments==2.19.2
 pyparsing==3.3.2
 python-dateutil==2.9.0.post0
 python-json-logger==4.0.0
+pytokens==0.4.1
 PyYAML==6.0.3
 pyzmq==27.1.0
 referencing==0.37.0
@@ -93,6 +99,7 @@ Send2Trash==2.1.0
 setuptools==82.0.0
 six==1.17.0
 soupsieve==2.8.3
+SQLAlchemy==2.0.47
 stack-data==0.6.3
 terminado==0.18.1
 threadpoolctl==3.6.0
